task2/log/build_2025-11-15_08-52-11/robocon_vision_pkg/stdout_stderr.log
running egg_info
creating ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info
writing ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/entry_points.txt
writing requirements to ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/requires.txt
writing top-level names to ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/top_level.txt
writing manifest file '../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/SOURCES.txt'
reading manifest file '../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build
creating /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib
creating /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib/robocon_vision_pkg
copying robocon_vision_pkg/__init__.py -> /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib/robocon_vision_pkg
copying robocon_vision_pkg/camera_publisher.py -> /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib/robocon_vision_pkg
running install
running install_lib
creating /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg
copying /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib/robocon_vision_pkg/__init__.py -> /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg
copying /root/ros_ws/tasks/task2/build/robocon_vision_pkg/build/lib/robocon_vision_pkg/camera_publisher.py -> /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg
byte-compiling /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg/__init__.py to __init__.cpython-310.pyc
byte-compiling /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg/camera_publisher.py to camera_publisher.cpython-310.pyc
running install_data
creating /root/ros_ws/tasks/task2/install/robocon_vision_pkg/share/ament_index
creating /root/ros_ws/tasks/task2/install/robocon_vision_pkg/share/ament_index/resource_index
creating /root/ros_ws/tasks/task2/install/robocon_vision_pkg/share/ament_index/resource_index/packages
copying resource/robocon_vision_pkg -> /root/ros_ws/tasks/task2/install/robocon_vision_pkg/share/ament_index/resource_index/packages
copying package.xml -> /root/ros_ws/tasks/task2/install/robocon_vision_pkg/share/robocon_vision_pkg
running install_egg_info
  File "/root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg/camera_publisher.py", line 26
    			break
    			^^^^^
SyntaxError: 'break' outside loop

Copying ../../build/robocon_vision_pkg/robocon_vision_pkg.egg-info to /root/ros_ws/tasks/task2/install/robocon_vision_pkg/lib/python3.10/site-packages/robocon_vision_pkg-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/root/ros_ws/tasks/task2/build/robocon_vision_pkg/install.log'
